duo and component

--- a/test/browser/index.html
+++ b/test/browser/index.html
@@ -12,13 +12,10 @@
         baseUrl: './',
         paths: {
           text: './vendor/require-text',
-          jsonrcs: '../../src/pull',
-          'jsonrcs/common': '../../src/common',
-          'jsonrcs/combine': '../../src/combine',
-          superagent: './vendor/superagent',
           mocha: './vendor/mocha',
           chai: './vendor/chai',
-          sinon: './vendor/sinon'
+          sinon: './vendor/sinon',
+          jsonrcs: '../../jsonrcs'
         },
         packages: [
         ]
